RESOLVED FIXED76595
image/pjpeg not supported for decoding on BlackBerry platform
https://bugs.webkit.org/show_bug.cgi?id=76595
Summary image/pjpeg not supported for decoding on BlackBerry platform
Rob Buis
Reported 2012-01-18 18:47:32 PST
Attachments of type image/pjpeg are not shown for BlackBerry port while image/jpeg works fine.
Attachments
Patch (1.41 KB, patch)
2012-01-18 18:55 PST, Rob Buis
tonikitoo: review+
Rob Buis
Comment 1 2012-01-18 18:55:04 PST
Charles Wei
Comment 2 2012-01-18 19:15:11 PST
Looks good to me, but I am not a reviewer to grant you the r+ :-)
Rob Buis
Comment 3 2012-01-19 05:34:20 PST
Landed in r 105406.
Note You need to log in before you can comment on or make changes to this bug.