image/pjpeg not supported for decoding on BlackBerry platform https://bugs.webkit.org/show_bug.cgi?id=76595

Reviewed by Antonio Gomes.

Add image/pjpeg as one of the supported types for image decoding on BlackBerry platform.

* platform/MIMETypeRegistry.cpp:
(WebCore::initializeSupportedImageMIMETypes):

git-svn-id: svn://svn.chromium.org/blink/trunk@105406 bbb929c8-8fbe-4397-9dbb-9b2b20218538